--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,7 @@
-
 header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
     padding: 40px;
 }
 
@@ -12,51 +10,53 @@ header {
     margin-right: 200px;
 }
 
-.header___button{
+.header___button {
     padding: 20px 50px;
     font-size: 17px;
-    color:aliceblue;
+    color: aliceblue;
     border-radius: 10px;
     background: #FF7143;
     border: none;
     cursor: pointer;
     margin-left: 50px;
-    
+
 }
 
-.menu__text{
+.menu__text {
     position: relative;
     text-decoration: none;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
+    color: #696871;
     line-height: 30px;
     margin: 30px;
 }
 
-.menu__text::before{
+.menu__text::before {
     content: '';
-	position: absolute;
-	left: 0; bottom: -5px;
-	width: 0;
-	height: 2px;
-	background-color: #5454D4;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 0;
+    height: 2px;
+    background-color: #5454D4;
 }
 
 .menu__text:hover:before {
-	width: 100%;
+    color: #5454D4;
+    width: 100%;
 }
 
 .menu__text::before {
-	transition: width 0.35s;
+    transition: width 0.35s;
+    color: #5454D4
 }
 
-@media screen and (max-width: 800px){
-     
+@media screen and (max-width: 800px) {
+
     header {
-            flex-direction: column;
-            padding: 50px;
+        flex-direction: column;
+        padding: 50px;
     }
-     
+
 }
-
-
