--- a/styles/landing.css
+++ b/styles/landing.css
@@ -6,6 +6,11 @@
     gap: 74px;
 }
 
+.main-landing__area-button {
+    display: flex;
+    gap: 40px;
+}
+
 .main-landing__img {
     width: 580px;
     margin-left: 20px;
@@ -21,9 +26,6 @@
     margin-left: 100px;
 }
 
-.main-landing__bottom-img{
-    width: 100px;
-}
 
 .main-landing__wrapper {
     max-width: 460px;
@@ -35,16 +37,12 @@
     line-height: 77px;
 }
 
-.main-landing__titleMin{
+.main-landing__titleMin {
     margin-bottom: 30px;
     font-size: 50px;
     line-height: 77px;
 }
 
-.main-landing__bottom-title{
-    font-size: 30px;
-    line-height: 50px;
-}
 
 .main-landing__text {
     font-size: 20px;
@@ -52,10 +50,6 @@
     color: #696871;
 }
 
-.main-landing__bottom-text{
-    font-size: 15px;
-    color: #696871
-}
 
 .main-landing__button {
     margin-top: 30px;
@@ -74,22 +68,23 @@
 }
 
 .main-landing__arrow {
-    width: 60px;
-    margin-left: 40px;
+    border: 1px solid black;
+    border-radius: 50%;
 }
 
-.main-landing__link{
+.main-landing__arrow:hover {
+    border-color: #2d2d6c;
+}
+
+.main-landing__link {
     font-size: 20px;
     line-height: 30px;
 }
 
 a {
     text-decoration: none;
-  }
-  
-a:hover {
-    text-decoration: underline;
-  }
+}
+
 
 
 @media screen and (max-width: 1400px) {
@@ -116,14 +111,14 @@ a:hover {
         font-size: 40px;
         line-height: 47px;
     }
-    
+
     .main-landing__text {
         font-size: 16px;
         line-height: 20px;
         color: #696871;
     }
 
-    .main-landing__link{
+    .main-landing__link {
         font-size: 16px;
         line-height: 20px;
     }
@@ -135,11 +130,11 @@ a:hover {
         padding: 100px;
     }
 
-    .main__bottom{
+    .main__bottom {
         flex-direction: column;
     }
 
-    .form_toggle{
+    .form_toggle {
         width: 60%;
     }
 
