--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,14 @@
 * {
-    margin: 0;
     padding: 0;
 }
 
 html,
 body {
     height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
-
-.main__input {
-    margin-top: 20px;
-    padding: 10px 8px;
-}
-
-#unique-a {
-    font-size: 24px;
-    color: red;
+main {
+    height: 100%;
 }
