--- a/styles/info.css
+++ b/styles/info.css
@@ -7,11 +7,13 @@
 
 .info__sector {
     text-align: center;
+    margin-bottom: 158px;
 }
 
 .info__sector-textW {
+    padding-top: 34px;
     font-size: 17px;
-    line-height: 70px;
+    line-height: 22px;
     color: #696871;
 }
 
@@ -19,12 +21,12 @@
     font-size: 18px;
     color: #696871;
     line-height: 30px;
+    padding-bottom: 35px;
 }
 
 .info__sector-title {
     font-size: 50px;
     line-height: 70px;
-    padding: 10px;
     color: #1D293F;
 }
 
@@ -36,12 +38,13 @@
     border: none;
     cursor: pointer;
     background-color: #FFFFFF;
+    margin-bottom: 27px;
 }
 
 .info-card {
     text-decoration: none;
-    width: 350px;
-    height: 450px;
+    width: 330px;
+    height: 441px;
     background-color: #F8F8F8;
 }
 
@@ -57,6 +60,20 @@
 .info__sector-button:hover {
     background: #9F3919;
     color: aliceblue;
+}
+
+@media screen and (max-width: 1050px) {
+    .main-info {
+        gap: 30px;
+    }
+
+    .info-card{
+        width: 200px;
+    }
+
+    .info-card:hover{
+        width: 250px;
+    } 
 }
 
 @media screen and (max-width: 800px) {
