--- a/styles/landing.css
+++ b/styles/landing.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 74px;
+    margin-bottom: 100px;
 }
 
 .main-landing__area-button {
@@ -93,11 +94,11 @@ a {
     }
 
     .main-landing__img {
-        width: 40%;
+        max-width: 80%;
     }
 
     .main-landing__img2 {
-        width: 40%;
+        max-width: 80%;
     }
 
     .main-landing__title {
@@ -127,11 +128,11 @@ a {
 @media screen and (max-width: 800px) {
     .main-landing {
         flex-direction: column;
-        padding: 100px;
     }
 
     .main__bottom {
-        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 32px
     }
 
     .form_toggle {
