--- a/styles/landing.css
+++ b/styles/landing.css
@@ -7,8 +7,18 @@
     margin-bottom: 100px;
 }
 
+.main-landing__bottom {
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 74px;
+    margin-bottom: 150px;
+}
+
 .main-landing__area-button {
     display: flex;
+    align-items: center;
     gap: 40px;
 }
 
@@ -30,6 +40,7 @@
 
 .main-landing__wrapper {
     max-width: 460px;
+    text-align: left;
 }
 
 .main-landing__title {
@@ -68,12 +79,14 @@
     transition: all ease 0.5s;
 }
 
-.main-landing__arrow {
-    border: 1px solid black;
+
+.main-landing__button-arrow{
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
 }
 
-.main-landing__arrow:hover {
+.main-landing__button-arrow:hover {
     border-color: #2d2d6c;
 }
 
@@ -90,6 +103,10 @@ a {
 
 @media screen and (max-width: 1400px) {
     .main-landing {
+        gap: 30px;
+    }
+
+    .main-landing__bottom{
         gap: 30px;
     }
 
@@ -128,6 +145,14 @@ a {
 @media screen and (max-width: 800px) {
     .main-landing {
         flex-direction: column;
+    }
+
+    .main-landing__bottom{
+        flex-direction: column;
+    }
+
+    .main-landing__bottom{
+        margin-bottom: 30px;
     }
 
     .main__bottom {
