--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,9 @@
 header {
     justify-content: space-around;
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
     padding: 40px;
-    gap: 180px;
 }
 
 .header__menu {
