--- a/styles/landing.css
+++ b/styles/landing.css
@@ -60,6 +60,7 @@
     font-size: 20px;
     line-height: 30px;
     color: #696871;
+    margin-bottom: 50px;
 }
 
 
@@ -80,11 +81,14 @@
 }
 
 
-.main-landing__button-arrow{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
+.main-landing__button-arrow {
+    border: 1px solid #E7E7E7;
+    border-radius: 60px;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    }
 
 .main-landing__button-arrow:hover {
     border-color: #2d2d6c;
